--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "start:staging": "env-cmd -f .env.staging react-scripts start",
         "build": "react-scripts build",
+        "build:staging": "env-cmd -f .env.staging react-scripts build",
+        "build:production": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint . ",
@@ -89,6 +92,7 @@
         "@types/leaflet": "^1.9.12",
         "@types/lodash": "^4.17.0",
         "babel-jest": "^29.7.0",
+        "env-cmd": "^10.1.0",
         "eslint": "^8.57.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
