--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# REACT_APP_BASE_URL='https://app.moorfind.com:8443/'
-REACT_APP_BASE_URL='http://localhost:8084'
+REACT_APP_BASE_URL='https://app.moorfind.com:8443/'
