--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
- REACT_APP_BASE_URL='http://localhost:8082'
+#  REACT_APP_BASE_URL='http://localhost:8082'
+REACT_APP_BASE_URL='http://ec2-54-206-55-223.ap-southeast-2.compute.amazonaws.com:8082/'
+
 
