--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_BASE_URL='http://ec2-54-206-55-223.ap-southeast-2.compute.amazonaws.com:8082/'
-# REACT_APP_BASE_URL='http://localhost:8082'
+REACT_APP_BASE_URL='https://app.moorfind.com:8443/'
